--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-cake-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tate-t.github.io/my-cake-project/",
+  "homepage": "https://TimurCherin.github.io/my-cake-project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
